syntax = "proto3";

package proto;

option go_package = "./";

service DeliveryAgentService {
  rpc AddDeliveryAgent(AddDeliveryAgentRequest) returns (AddDeliveryAgentResponse);
  rpc AssignAgentToOrder(AssignAgentToOrderRequest) returns (AssignAgentToOrderResponse);
}

message AddDeliveryAgentRequest {
  string name = 1;
  string city = 2;
}

message AddDeliveryAgentResponse {
  string message = 1;
}

message AssignAgentToOrderRequest {
  uint32 agent_id = 1;
  uint32 order_id = 2;
}

message AssignAgentToOrderResponse {
  string message = 1;
}